--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -158,6 +158,7 @@ html.plugin-blog.blog-post-page.plugin-id-default article h3 {
 	@apply capitalize text-sm sm:text-lg mb-3 bg-light-green px-2 py-6 dark:bg-dark-green;
 }
 
+
 /* /////////////////////// */
 /* article markdown */
 
@@ -166,11 +167,11 @@ html.plugin-blog.blog-post-page.plugin-id-default .markdown p:has(a) {
 }
 
 html.plugin-blog.blog-post-page.plugin-id-default .markdown h3 {
-	@apply mb-0;
+	@apply mb-0 max-w-prose;
 }
 
 html.plugin-blog.blog-post-page.plugin-id-default .markdown h4 {
-	@apply text-pretty mt-4;
+	@apply text-pretty mt-4 max-w-prose;
 }
 
 html.plugin-blog.blog-post-page.plugin-id-default .markdown p > a {
