--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -398,12 +398,12 @@ html.plugin-blog.blog-post-page article header {
 	@apply text-center flex flex-col justify-center items-center gap-4 px-4 sm:px-8;
 }
 
-html.plugin-blog.blog-post-page article .markdown h2 {
-	@apply text-pretty text-xl sm:text-3xl dark:text-emerald max-w-lg;
+html.plugin-blog.blog-post-page article .markdown .text h2 {
+	@apply text-pretty text-xl sm:text-3xl dark:text-emerald max-w-prose;
 }
 
-html.plugin-blog.blog-post-page article .markdown h3 {
-	@apply dark:text-light-green;
+html.plugin-blog.blog-post-page article .markdown .text h3 {
+	@apply dark:text-light-green max-w-lg;
 }
 
 html.plugin-blog.blog-post-page article .markdown h4 {
