--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -394,7 +394,12 @@ html.plugin-blog.blog-post-page
 }
 
 html.plugin-blog.blog-post-page article .markdown .text .figureGrid {
-	@apply grid grid-rows-[auto] grid-cols-1 md:grid-cols-2 md:grid-rows-[auto] gap-2 justify-center justify-items-center;
+	@apply grid grid-rows-[auto] grid-cols-1 md:grid-cols-2 md:grid-rows-[auto] gap-2 gap-y-8 justify-center justify-items-center;
+}
+
+
+html.plugin-blog.blog-post-page article .markdown .text .figureGrid figure {
+	@apply m-0;
 }
 
 html.plugin-blog.blog-post-page article .markdown .text .figureGrid .last {
